# unreal-lang

./: .gitignore  .gitmodules  Cargo.toml  README.md  SYNTAX.md  TODO.md
crates/old/ulc_lexer/: Cargo.toml
crates/old/ulc_lexer/src/: lib.rs
crates/old/ulc_parser/: expression.rs  lib.rs  statement.rs
crates/ulc/: Cargo.toml
crates/ulc/src/: doctor.rs  main.rs
crates/ulc/src/cmd/: build.rs  doctor.rs  mod.rs  new.rs
crates/ulc_ast/: Cargo.toml
crates/ulc_ast/src/: impls.rs  lib.rs  oper.rs  types.rs
crates/ulc_builder/: Cargo.toml
crates/ulc_builder/src/: lib.rs  types.rs
crates/ulc_checker/: Cargo.toml
crates/ulc_checker/src/: lib.rs
crates/ulc_codegen_cranelift/: Cargo.toml
crates/ulc_codegen_cranelift/src/: lib.rs  translator.rs  utils.rs
crates/ulc_codegen_llvm/: Cargo.toml
crates/ulc_codegen_llvm/src/: types.rs
crates/ulc_middle_ast/: Cargo.toml
crates/ulc_middle_ast/src/: check.rs  expr.rs  func.rs  lib.rs  stmt.rs  ulc_std.rs
crates/ulc_parser/: Cargo.toml
crates/ulc_parser/src/: chumsky_parser.rs  expression.rs  lib.rs  statement.rs
crates/ulc_parser/src/chumsky_parser/: lexer.rs  literal.rs  operations.rs
crates/ulc_parser/tests/: chumsky.rs  it.rs
crates/ulc_types/: Cargo.toml
crates/ulc_types/src/: errors.rs  lib.rs  token.rs  token_kind.rs  types.rs
template/: config.toml  main.ul  test.ul
