[package]
name = "ulc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"

ulc_builder = { path = "../ulc_builder" }
