[package]
name = "ulc_codegen_cranelift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
ar = "0.9.0"
cranelift = "0.78.0"
cranelift-module = "0.78.0"
cranelift-native = "0.78.0"
cranelift-object = "0.78.0"
log = "0.4.14"
target-lexicon = "0.12.2"

ulc_ast = { path = "../ulc_ast" }
ulc_middle_ast = { path = "../ulc_middle_ast" }
ulc_types = { path = "../ulc_types" }