[package]
name = "ulc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chumsky = "0.7.0"

ulc_ast = { path = "../ulc_ast" }
ulc_lexer = { path = "../ulc_lexer" }
ulc_types = { path = "../ulc_types" }